# 2023_Quantinuum

./: .gitignore  Challenge_One.ipynb  Opti_Notebook.ipynb  README.md  pyproject.toml
TKET and Emulator tutorial/: BV_algorithm.qasm  README.md  TKET and Emulator tutorial.ipynb  pytket_emulator_example.json
dev/: maxcut.py  maxcut_sym_circ.py
gradient_descent/: gradient_descent.ipynb  gradient_descentg2.ipynb
gradient_descent/Gradient_TestR/: 1e-1 lr.3.docx  1e-3 lr.1.docx
qaoa_challenge/: gradient_descent.ipynb  maxcut.py  maxcut_notebook.ipynb  maxcut_sym_circ.py
results/: Results.xlsx
sample circuits/: README.md  circuit1.qasm  circuit3.qasm  circuit4.qasm
src/: Challenge_One.ipynb
team_solutions/: .gitignore  README.md  iQuHackSubmission.ipynb  maxcut.py  maxcut_notebook_NEW.ipynb  maxcut_sym_circ.py  team_solutions.md
team_solutions/Carls/: Presentation  QAOA_pytket_Demo.ipynb  QUBO_Traveling_Salesman_Overview.ipynb  README.md  Works "Cited"  classical_max_cut.ipynb  qubit_reuse_writeup.ipynb
team_solutions/Carls'_QSearch/: Quantinuum Challenge Classical MaxCut Algorithm.ipynb  Works Cited  qubit_reuse.ipynb
team_solutions/Espada/: Challenge_Five.ipynb  Challenge_FiveT.ipynb  Challenge_Four.ipynb  Challenge_One.ipynb  Challenge_Three.ipynb  Challenge_Two.ipynb
team_solutions/InsertTeamName/: InsertTeamCode.ipynb  InsertTeamName.pptx  README.md  maxcut_optimized.ipynb
team_solutions/InsertTeamname/: InsertTeamCode.ipynb  team_solutions.md
team_solutions/Quassant/: K-Vertex.ipynb  maxcut_GA.ipynb  maxcut_QAOA_Summers.ipynb  (+1 more)
(+59 files in other folders)
