[tool.poetry]
name = "2023-quantinuum"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytket = "^1.11.1"
pytket-qiskit = "^0.34.0"
pytket-quantinuum = "^0.13.0"
matplotlib = "^3.6.3"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
